--- a/my-appp/styles/Home.module.css
+++ b/my-appp/styles/Home.module.css
@@ -9,18 +9,16 @@
 
 .footer {
     display: flex;
-    flex: 1;
     padding: 2rem 0;
     border-top: 1px solid #eaeaea;
     justify-content: center;
     align-items: center;
 }
 
-.footer a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
+.image {
+    width: 70%;
+    height: 50%;
+    margin-left: 20%;
 }
 
 .title a {
