--- a/my-appp/styles/Home.module.css
+++ b/my-appp/styles/Home.module.css
@@ -21,9 +21,9 @@
     margin-left: 20%;
 }
 
-.title a {
-    color: #0070f3;
-    text-decoration: none;
+.title {
+    font-size: 2rem;
+    margin: 2rem 0;
 }
 
 .title a:hover,
